<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/item_details"
        android:textColor="@color/gold_bg"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gold_bg"
        android:orientation="vertical"
        android:padding="16dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/edt_Itemname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="4dp">

                <EditText
                    android:id="@+id/edt_Grossweight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="7"
                    android:hint="@string/gross_weight"
                    android:inputType="numberDecimal"
                   />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/karats" />

                <Spinner
                    android:id="@+id/sp_karats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:entries="@array/Karats" />
            </LinearLayout>
            <!--            <com.google.android.material.textfield.TextInputLayout-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="4dp">-->

            <!--                <EditText-->
            <!--                    android:id="@+id/edt_Karats"-->
            <!--                    android:layout_width="164dp"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_margin="10dp"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:ems="5"-->
            <!--                    android:visibility="gone"-->
            <!--                    android:maxLength="2"-->
            <!--                    android:hint="Percentage(%)"-->
            <!--                    android:inputType="numberDecimal" />-->
            <!--            </com.google.android.material.textfield.TextInputLayout>-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/netWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/net_weight" />

            <TextView
                android:id="@+id/netWeightAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text="0" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/appraisalValue_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/appraisal_value" />

            <TextView
                android:id="@+id/appraisalAmount_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text="4,200" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/BValue_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/bank_value" />

            <TextView
                android:id="@+id/BAmount_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text="3,200" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/save"
                android:textColor="@color/gold_bg"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/closeBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/close"
                android:textColor="@color/gold_bg"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>